--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "browserstack": "^1.5.1",
     "chalk": "^1.1.3",
     "glob": "^7.0.3",
-    "jasmine": "2.8.0",
-    "jasminewd2": "^2.1.0",
+    "jasmine": "3.5.0",
+    "jasminewd2": "^2.2.0",
     "optimist": "~0.6.0",
     "q": "1.4.1",
     "saucelabs": "^1.5.0",
@@ -31,11 +31,11 @@
   "devDependencies": {
     "@types/chalk": "^0.4.28",
     "@types/glob": "^5.0.29",
-    "@types/jasmine": "^2.5.47",
-    "@types/jasminewd2": "^2.0.0",
+    "@types/jasmine": "^3.5.2",
+    "@types/jasminewd2": "^2.0.8",
     "@types/minimatch": "^2.0.28",
     "@types/minimist": "^1.1.28",
-    "@types/node": "^6.0.46",
+    "@types/node": "^10.17.14",
     "@types/optimist": "^0.0.29",
     "body-parser": "~1.15.2",
     "chai": "~3.5.0",
@@ -43,25 +43,25 @@
     "clang-format": "1.0.49",
     "expect.js": "~0.3.1",
     "express": "~4.14.0",
-    "gulp": "^3.9.1",
-    "gulp-clang-format": "1.0.23",
-    "gulp-tslint": "^7.0.1",
+    "gulp": "^4.0.2",
+    "gulp-clang-format": "1.0.27",
+    "gulp-tslint": "^8.1.4",
     "jshint": "^2.9.2",
     "lodash": "^4.5.1",
     "marked": "^0.3.3",
     "mocha": "2.5.3",
     "natives": "^1.1.6",
-    "rimraf": "~2.5.3",
+    "rimraf": "~3.0.1",
     "run-sequence": "^1.1.5",
     "semver": "^5.3.0",
-    "tslint": "^4.1.1",
-    "tslint-eslint-rules": "^3.1.0",
-    "typescript": "^2.1.5",
+    "tslint": "^5.20.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "typescript": "3.5.3",
     "vrsource-tslint-rules": "^4.0.1"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/angular/protractor.git"
+    "url": "git://github.com/SChervonyi/protractor-jm3.git"
   },
   "bin": {
     "protractor": "bin/protractor",
@@ -81,7 +81,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=6.9.x"
+    "node": ">=10.18.1"
   },
-  "version": "5.4.3"
+  "version": "5.4.4"
 }
